[package]
name = "familia_lacabra"
version = "2.0.1-dev"
edition = "2024"
keywords = ["docker", "web", "api", "discord"]
readme = "README.MD"
description = "Image API for LA CABRA"
authors = ["holasoyender <jwxj@proton.me>"]
repository = "https://github.com/Discusss/familia"
license = "MIT"

[dependencies]
rocket = { version = "0.5.1", features = ["serde_json", "json"] }
rocket_cors = { version = "0.6.0" }
log = { version = "0.4.22" }
chrono = { version = "0.4.38" }
fern = { version = "0.7.0", features = ["colored"] }
dotenv = { version = "0.15.0"}
os_info = { version = "3.10.0" }
whoami = { version = "1.6.0" }
serde = { version = "1.0.214", features = ["derive"] }
rand = { version = "0.9.1" }
